<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    android:orientation="vertical"
    android:background="@drawable/bg_background_main"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.activity.Authentication.SignUpActivity">

    <LinearLayout
        android:id="@+id/ll_main"
        android:gravity="center"
        android:layout_width="match_parent"
        android:layout_height="160dp"
        android:orientation="horizontal">

        <ImageView
            android:layout_marginTop="4dp"
            android:id="@+id/iv_back"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:padding="8dp"
            android:layout_marginLeft="8dp"
            android:src="@drawable/ic_shape"/>

        <ImageView
            android:layout_marginLeft="32dp"
            android:layout_width="80dp"
            android:layout_height="80dp"
            android:layout_marginVertical="32dp"
            android:src="@drawable/ic_logo" />

        <TextView
            android:layout_marginLeft="16dp"
            android:gravity="left"
            style="@style/Title"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:text="Sign Up" />


    </LinearLayout>

    <ScrollView
        android:layout_below="@id/ll_main"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">


            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginHorizontal="16dp"
                android:elevation="10dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <TextView
                        android:layout_marginTop="24dp"
                        style="@style/EditTextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="Name" />

                    <EditText
                        android:id="@+id/et_Name"
                        android:inputType="text"
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/EditText"
                        android:hint="@string/enter_name"
                        />

                    <View
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/red"/>

                    <TextView
                        android:layout_marginTop="24dp"
                        style="@style/EditTextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="Mobile Number" />

<!--                    <EditText-->
<!--                        android:id="@+id/et_No"-->
<!--                        android:inputType="number"-->
<!--                        android:maxLength="10"-->
<!--                        android:layout_marginTop="10dp"-->
<!--                        android:layout_marginHorizontal="16dp"-->
<!--                        android:layout_width="match_parent"-->
<!--                        android:layout_height="wrap_content"-->
<!--                        style="@style/EditText"-->
<!--                        android:hint="@string/_07x_xxxxxxx"-->
<!--                        />-->

                    <LinearLayout
                        android:layout_marginTop="10dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginHorizontal="16dp"
                        android:gravity="center"
                        android:orientation="horizontal">

                        <com.rilixtech.widget.countrycodepicker.CountryCodePicker
                            android:id="@+id/ccp"
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_marginRight="5dp"
                            app:ccp_defaultNameCode="94"
                            />

                        <EditText
                            android:background="@null"
                            android:id="@+id/et_No"
                            android:maxLength="10"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="@string/_07x_xxxxxxx"
                            android:inputType="phone" />

                    </LinearLayout>

                    <View
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/view_lightgray"/>


                    <TextView
                        android:layout_marginTop="24dp"
                        style="@style/EditTextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="Password" />


                    <EditText
                        android:id="@+id/et_Password"
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textPassword"
                        android:hint=""
                        style="@style/EditText"
                        />

                    <View
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/view_lightgray"/>

                    <TextView
                        android:layout_marginTop="24dp"
                        style="@style/EditTextTitle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="16dp"
                        android:text="@string/email_optional" />

                    <EditText
                        android:id="@+id/et_Email"
                        android:inputType="textEmailAddress"
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        style="@style/EditText"
                        android:hint="enter email"
                        />

                    <View
                        android:layout_marginTop="10dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:background="@color/view_lightgray"/>




                    <TextView
                        android:layout_marginTop="24dp"
                        android:layout_marginBottom="24dp"
                        android:layout_marginHorizontal="16dp"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:text="SIGN UP"
                        android:gravity="center"
                        android:id="@+id/tv_SignUp"
                        android:textSize="14sp"
                        android:padding="10dp"
                        android:fontFamily="@font/regular"
                        android:background="@drawable/bg_solid_red"
                        android:textColor="@color/white"/>


                </LinearLayout>


            </androidx.cardview.widget.CardView>



        </LinearLayout>
    </ScrollView>

    <include
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        layout="@layout/loader"
        android:id="@+id/loader_layout"/>


</RelativeLayout>